--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	</style>
 </head>
 <body  style="font-family: 'Dancing Script', cursive;">
-    <div class="bg-cover bg-center w-full h-full fixed overflow-y-auto" style="background-image: url(backgroundfixed.jpg)">
+    <div class="bg-cover bg-center w-full h-full fixed overflow-y-auto " style="background-image: url(background.png)">
         <div class="container mx-auto py-20 lg:px-20">
             <div class="flex pb-20 border-b-2 shadow-2xl">
                 <div class="lg:w-48 lg:h-48 w-24 h-24 bg-cover rounded-full mx-4" style="background-image: url(avt.jpg)">
@@ -394,8 +394,8 @@
                     </div>
                 </div>
                 <p class="text-3xl m-6">Time line</p>
-                <div class="text-2xl">
-                    <div class="relative w-1/2 m-8">
+                <div class="md:text-2xl text-xl">
+                    <div class="relative md:w-2/3 m-8">
                         <div class="border-r-2 border-gray-500 absolute h-full top-0" style="left: 15px"></div>
                         <ul class="list-none m-0 p-0">
                           <li class="mb-2">
