--- a/index.html
+++ b/index.html
@@ -77,22 +77,22 @@
                             <div class=" flex py-3">
                                 <svg class="w-8 h-8 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><path d="M 16 4 C 9.382813 4 4 9.382813 4 16 C 4 22.617188 9.382813 28 16 28 C 22.617188 28 28 22.617188 28 16 C 28 9.382813 22.617188 4 16 4 Z M 16 6 C 21.535156 6 26 10.464844 26 16 C 26 21.535156 21.535156 26 16 26 C 10.464844 26 6 21.535156 6 16 C 6 10.464844 10.464844 6 16 6 Z M 11.5 12 C 10.671875 12 10 12.671875 10 13.5 C 10 14.328125 10.671875 15 11.5 15 C 12.328125 15 13 14.328125 13 13.5 C 13 12.671875 12.328125 12 11.5 12 Z M 20.5 12 C 19.671875 12 19 12.671875 19 13.5 C 19 14.328125 19.671875 15 20.5 15 C 21.328125 15 22 14.328125 22 13.5 C 22 12.671875 21.328125 12 20.5 12 Z M 10.8125 19 L 9.09375 20 C 10.476563 22.386719 13.046875 24 16 24 C 18.953125 24 21.523438 22.386719 22.90625 20 L 21.1875 19 C 20.148438 20.792969 18.226563 22 16 22 C 13.773438 22 11.851563 20.792969 10.8125 19 Z"/></svg>
                                 <div class="flex justify-center items-center">
-                                    <p class="text-2xl lg:px-3 px-1">Name:</p>
-                                    <p class="text-2xl lg:px-3 px-1">Nguyen Van Cuong</p>
+                                    <p class="text-xl md:text-2xl lg:px-3 px-1">Name:</p>
+                                    <p class="text-xl md:text-2xl lg:px-3 px-1">Nguyen Van Cuong</p>
                                 </div>
                             </div>
                             <div class=" flex py-3">
                                 <svg class="w-8 h-8 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><path d="M 19 3 C 13.489 3 9 7.489 9 13 C 9 15.395 9.839 17.5875 11.25 19.3125 L 3.28125 27.28125 L 4.71875 28.720703 L 12.6875 20.751953 C 14.4115 22.161953 16.605 23 19 23 C 24.511 23 29 18.511 29 13 C 29 7.489 24.511 3 19 3 z M 19 5 C 23.43 5 27 8.57 27 13 C 27 17.43 23.43 21 19 21 C 14.57 21 11 17.43 11 13 C 11 8.57 14.57 5 19 5 z M 19 8 C 16.791 8 15 9.791 15 12 C 15 15 19 19 19 19 C 19 19 23 15 23 12 C 23 9.791 21.209 8 19 8 z M 19 10 C 20.105 10 21 10.895 21 12 C 21 13.104 20.105 14 19 14 C 17.895 14 17 13.104 17 12 C 17 10.895 17.895 10 19 10 z"/></svg>
                                 <div class="flex justify-center items-center">
-                                    <p class="text-2xl lg:px-3 px-2">From:</p>
-                                    <p class="text-2xl lg:px-3 px-2">Trieu Son, Thanh Hoa</p>
+                                    <p class="text-xl md:text-2xl lg:px-3 px-2">From:</p>
+                                    <p class="text-xl md:text-2xl lg:px-3 px-2">Trieu Son, Thanh Hoa</p>
                                 </div>
                             </div>  
                             <div class=" flex py-3">
                                 <svg class="w-8 h-8 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><path d="M 8.65625 3 C 8.132813 3 7.617188 3.1875 7.1875 3.53125 L 7.125 3.5625 L 7.09375 3.59375 L 3.96875 6.8125 L 4 6.84375 C 3.035156 7.734375 2.738281 9.066406 3.15625 10.21875 C 3.160156 10.226563 3.152344 10.242188 3.15625 10.25 C 4.003906 12.675781 6.171875 17.359375 10.40625 21.59375 C 14.65625 25.84375 19.402344 27.925781 21.75 28.84375 L 21.78125 28.84375 C 22.996094 29.25 24.3125 28.960938 25.25 28.15625 L 28.40625 25 C 29.234375 24.171875 29.234375 22.734375 28.40625 21.90625 L 24.34375 17.84375 L 24.3125 17.78125 C 23.484375 16.953125 22.015625 16.953125 21.1875 17.78125 L 19.1875 19.78125 C 18.464844 19.433594 16.742188 18.542969 15.09375 16.96875 C 13.457031 15.40625 12.621094 13.609375 12.3125 12.90625 L 14.3125 10.90625 C 15.152344 10.066406 15.167969 8.667969 14.28125 7.84375 L 14.3125 7.8125 L 14.21875 7.71875 L 10.21875 3.59375 L 10.1875 3.5625 L 10.125 3.53125 C 9.695313 3.1875 9.179688 3 8.65625 3 Z M 8.65625 5 C 8.730469 5 8.804688 5.035156 8.875 5.09375 L 12.875 9.1875 L 12.96875 9.28125 C 12.960938 9.273438 13.027344 9.378906 12.90625 9.5 L 10.40625 12 L 9.9375 12.4375 L 10.15625 13.0625 C 10.15625 13.0625 11.304688 16.136719 13.71875 18.4375 L 13.9375 18.625 C 16.261719 20.746094 19 21.90625 19 21.90625 L 19.625 22.1875 L 22.59375 19.21875 C 22.765625 19.046875 22.734375 19.046875 22.90625 19.21875 L 27 23.3125 C 27.171875 23.484375 27.171875 23.421875 27 23.59375 L 23.9375 26.65625 C 23.476563 27.050781 22.988281 27.132813 22.40625 26.9375 C 20.140625 26.046875 15.738281 24.113281 11.8125 20.1875 C 7.855469 16.230469 5.789063 11.742188 5.03125 9.5625 C 4.878906 9.15625 4.988281 8.554688 5.34375 8.25 L 5.40625 8.1875 L 8.4375 5.09375 C 8.507813 5.035156 8.582031 5 8.65625 5 Z"/></svg>
                                 <div class="flex justify-center items-center">
-                                    <p class="text-2xl lg:px-3 px-2">Phone:</p>
-                                    <p class="text-2xl lg:px-3 px-2">0383392073</p>
+                                    <p class="text-xl md:text-2xl lg:px-3 px-2">Phone:</p>
+                                    <p class="text-xl md:text-2xl lg:px-3 px-2">0383392073</p>
                                 </div>
                             </div>  
                         </div>    
@@ -100,22 +100,22 @@
                             <div class=" flex py-3">
                                 <svg class="w-8 h-8 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><path d="M 9.5 5 C 5.363281 5 2 8.402344 2 12.5 C 2 13.929688 2.648438 15.167969 3.25 16.0625 C 3.851563 16.957031 4.46875 17.53125 4.46875 17.53125 L 15.28125 28.375 L 16 29.09375 L 16.71875 28.375 L 27.53125 17.53125 C 27.53125 17.53125 30 15.355469 30 12.5 C 30 8.402344 26.636719 5 22.5 5 C 19.066406 5 16.855469 7.066406 16 7.9375 C 15.144531 7.066406 12.933594 5 9.5 5 Z M 9.5 7 C 12.488281 7 15.25 9.90625 15.25 9.90625 L 16 10.75 L 16.75 9.90625 C 16.75 9.90625 19.511719 7 22.5 7 C 25.542969 7 28 9.496094 28 12.5 C 28 14.042969 26.125 16.125 26.125 16.125 L 16 26.25 L 5.875 16.125 C 5.875 16.125 5.390625 15.660156 4.90625 14.9375 C 4.421875 14.214844 4 13.273438 4 12.5 C 4 9.496094 6.457031 7 9.5 7 Z"/></svg>
                                 <div class="flex justify-center items-center">
-                                    <p class="text-2xl lg:px-3 px-2">Date of Birth:</p>
-                                    <p class="text-2xl lg:px-3 px-2">03/09/1997</p>
+                                    <p class="text-xl md:text-2xl lg:px-3 px-2">Date of Birth:</p>
+                                    <p class="text-xl md:text-2xl lg:px-3 px-2">03/09/1997</p>
                                 </div>
                             </div>  
                             <div class=" flex py-3">
                                 <svg class="w-8 h-8 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><path d="M 16 4.4375 L 15.09375 6.625 L 7.09375 25.625 L 6.1875 27.75 L 8.34375 26.9375 L 16 24.0625 L 23.65625 26.9375 L 25.8125 27.75 L 24.90625 25.625 L 16.90625 6.625 Z M 16 9.53125 L 22.1875 24.25 L 16.34375 22.0625 L 16 21.9375 L 15.65625 22.0625 L 9.8125 24.25 Z"/></svg>
                                 <div class="flex justify-center items-center">
-                                    <p class="text-2xl lg:px-3 px-2">Address:</p>
-                                    <p class="text-2xl lg:px-3 px-2">236 Dai Tu, Hoang Mai, Ha Noi</p>
+                                    <p class="text-xl md:text-2xl lg:px-3 px-2">Address:</p>
+                                    <p class="text-xl md:text-2xl lg:px-3 px-2">236 Dai Tu, Hoang Mai, Ha Noi</p>
                                 </div>
                             </div>  
                             <div class=" flex py-3">        
                                 <svg class="w-8 h-8 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><path d="M 6 5 L 6 15 L 2 15 L 2 28 L 19 28 L 19 24 L 30 24 L 30 11 L 23 11 L 23 5 L 6 5 z M 8 7 L 21 7 L 21 11 L 12 11 L 12 15 L 8 15 L 8 7 z M 14 13 L 28 13 L 28 22 L 19 22 L 19 15 L 14 15 L 14 13 z M 23 15 L 23 17 L 26 17 L 26 15 L 23 15 z M 4 17 L 6 17 L 13 17 L 17 17 L 17 18.113281 L 10.960938 21.867188 C 10.681938 22.041188 10.319062 22.042188 10.039062 21.867188 L 4 18.115234 L 4 17 z M 17 20.46875 L 17 26 L 4 26 L 4 20.470703 L 8.9824219 23.566406 C 9.4504219 23.857406 9.976 24.003906 10.5 24.003906 C 11.024 24.003906 11.548625 23.857453 12.015625 23.564453 L 17 20.46875 z"/></svg>
                                 <div class="flex justify-center items-center">
-                                    <p class="text-2xl lg:px-3 px-1">Email:</p>
-                                    <p class="text-2xl lg:px-3 px-1">nguyenvancuong1379@gmail.com</p>
+                                    <p class="text-xl md:text-2xl lg:px-3 px-1">Email:</p>
+                                    <p class="text-xl md:text-2xl lg:px-3 px-1">nguyenvancuong1379@gmail.com</p>
                                 </div>
                             </div>
                         </div>
@@ -458,7 +458,7 @@
                       <svg  class="w-8 h-8 fill-current mr-2 mr-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><path d="M 16 4 C 9.3844276 4 4 9.3844276 4 16 C 4 22.615572 9.3844276 28 16 28 C 22.615572 28 28 22.615572 28 16 C 28 9.3844276 22.615572 4 16 4 z M 16 6 C 21.534692 6 26 10.465308 26 16 C 26 21.027386 22.311682 25.161277 17.488281 25.878906 L 17.488281 18.916016 L 20.335938 18.916016 L 20.783203 16.023438 L 17.488281 16.023438 L 17.488281 14.443359 C 17.488281 13.242359 17.882859 12.175781 19.005859 12.175781 L 20.810547 12.175781 L 20.810547 9.6523438 C 20.493547 9.6093438 19.822688 9.515625 18.554688 9.515625 C 15.906688 9.515625 14.355469 10.913609 14.355469 14.099609 L 14.355469 16.023438 L 11.632812 16.023438 L 11.632812 18.916016 L 14.355469 18.916016 L 14.355469 25.853516 C 9.6088556 25.070647 6 20.973047 6 16 C 6 10.465308 10.465308 6 16 6 z"/></svg>
                       <div>
                         <p class="text-2xl">Facebook</p>
-                        <p class="text-xl">https://www.facebook.com/nguyenvancuong1379/</p>
+                        <p class="text-xl break-all">https://www.facebook.com/nguyenvancuong1379/</p>
                       </div>
                      
                     </div>
